# SPIRV-LLVM-Translator

include/: LLVMSPIRVExtensions.inc
lib/SPIRV/: CMExport.cpp  CMExport.h  CMUtil.cpp  CMUtil.h  CMakeLists.txt  PreprocessMetadata.cpp  SPIRVInternal.h  SPIRVReader.cpp  SPIRVReader.h  SPIRVWriter.cpp  SPIRVWriter.h
lib/SPIRV/libSPIRV/: SPIRVDecorate.h  SPIRVEntry.cpp  SPIRVEntry.h  SPIRVEnum.h  SPIRVInstruction.h  SPIRVIsValidEnum.h  SPIRVNameMapEnum.h  SPIRVType.h  spirv.hpp
test/: CMakeLists.txt  optnone.ll
